tests/baselines/reference/aliasUsageInIndexerOfClass.errors.txt
aliasUsageInIndexerOfClass_backbone.ts(2,12): error TS2564: Property 'someData' has no initializer and is not definitely assigned in the constructor.
aliasUsageInIndexerOfClass_main.ts(12,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== aliasUsageInIndexerOfClass_main.ts (1 errors) ====
    import Backbone = require("./aliasUsageInIndexerOfClass_backbone");
    import moduleA = require("./aliasUsageInIndexerOfClass_moduleA");
    interface IHasVisualizationModel {
        VisualizationModel: typeof Backbone.Model;
    }
    class N {
        [idx: string]: IHasVisualizationModel
        x = moduleA;
    }
    class N2 {
        [idx: string]: typeof moduleA
        x: IHasVisualizationModel;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
==== aliasUsageInIndexerOfClass_backbone.ts (1 errors) ====
    export class Model {
        public someData: string;
               ~~~~~~~~
!!! error TS2564: Property 'someData' has no initializer and is not definitely assigned in the constructor.
    }
    
==== aliasUsageInIndexerOfClass_moduleA.ts (0 errors) ====
    import Backbone = require("./aliasUsageInIndexerOfClass_backbone");
    export class VisualizationModel extends Backbone.Model {
        // interesting stuff here
    }
    